# game-programming-25

./: CMakeLists.txt  README.md  notes.md
exercises/: CMakeLists.txt  E00_introduction.cpp  E00_introduction.h  E00_introduction.md  E01_rendering.cpp  E02_collisions.cpp  E03_coordinate_systems.cpp  E03_coordinate_systems.md  E06_ui.cpp
exercises_solutions/: CMakeLists.txt
lib/itu/: itu_default_systems.cpp  itu_lib_engine.hpp
